--- a/index.html
+++ b/index.html
@@ -7,8 +7,18 @@
     <title>simple  app</title>
 </head>
 <body>
+    <h1>Simple  app</h1>
+    <nav>
+        <ul>
+            <li><a href="">Home</a></li>
+            <li><a href="">about</a></li>
+        </ul>
+    </nav>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore, fuga.</p>
 
+    <hr>
+
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus minima voluptates voluptatem voluptatibus perspiciatis commodi ullam nostrum error mollitia sapiente?</p>
     <script src="app.js"></script>
 </body>
 </html>
